fix: heading illustration overflowing issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,7 @@
 
 body {
   font-family: "SF Pro", sans-serif;
+  overflow-x: hidden;
 }
 
 .button {
